# Jovi_Spout

./: README.md  __init__.py  node_list.json  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
core/: __init__.py  spout.py
web/nodes/: spout_writer.js
